--- a/src/index.css
+++ b/src/index.css
@@ -106,3 +106,293 @@ body {
   margin-bottom: 1rem;
   font-size: 2rem;
 }
+
+/* meals */
+
+.section-meals h2 {
+  text-align: center;
+  letter-spacing: 1.5px;
+}
+
+.meals-center {
+  display: grid;
+  margin-top: 4rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 85%;
+  row-gap: 3rem;
+  column-gap: 1.5rem;
+  align-items: stretch;
+}
+
+.meals-center article {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  box-shadow: 2px 5px 3px 0 rgba(0, 0, 0, 0.5);
+  border-radius: 0.5rem;
+}
+
+.img-container img {
+  border-radius: 0.5rem;
+  width: 100%;
+  height: 20rem;
+  object-fit: cover;
+}
+
+@media (min-width: 830px) {
+  .meals-center {
+    grid-template-columns: auto auto;
+  }
+}
+@media (min-width: 1200px) {
+  .meals-center {
+    grid-template-columns: auto auto auto;
+  }
+}
+
+/*  meal */
+
+.info {
+  padding: 2rem;
+  text-align: left;
+}
+
+.info h2 {
+  text-align: left;
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.info h4 {
+  font-size: 1.5rem;
+  color: rgba(0, 0, 0, 0.7);
+  margin-bottom: 0.5rem;
+}
+.info p {
+  font-size: 1rem;
+  color: rgba(0, 0, 0, 0.4);
+  margin-bottom: 1.2rem;
+}
+
+.details-button {
+  text-decoration: none;
+  background-color: #7d8597;
+  border: none;
+  padding: 0.5rem 1.5rem;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  letter-spacing: 1px;
+  margin-top: 2rem;
+  color: white;
+}
+
+/* error */
+
+.error-search {
+  text-align: center;
+  letter-spacing: 2px;
+}
+
+.error-page {
+  margin-top: 5rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.error-page h1 {
+  margin-bottom: 1.5rem;
+  letter-spacing: 3px;
+}
+
+.error-page button {
+  background-color: #33415c;
+  padding: 0.7rem;
+  border-radius: 0.5rem;
+  color: white;
+  cursor: pointer;
+  letter-spacing: 1px;
+}
+
+/* Single Meal */
+
+.meal-section {
+  text-align: center;
+  padding: 5rem 0;
+}
+
+.meal-section button {
+  background-color: #33415c;
+  padding: 0.7rem;
+  border-radius: 0.5rem;
+  color: white;
+  cursor: pointer;
+  letter-spacing: 1px;
+}
+
+.meal-section h2 {
+  font-size: 2rem;
+  text-transform: capitalize;
+  margin-bottom: 3.5rem;
+  margin-top: 1rem;
+  letter-spacing: 0.3rem;
+}
+
+.meal-container {
+  width: 85%;
+  margin: 0 auto;
+  max-width: 1170px;
+  text-align: left;
+}
+
+.meal-container img {
+  width: 100%;
+  border-radius: 0.25rem;
+}
+
+.meal-info {
+  padding-top: 2rem;
+}
+
+.meal-info p {
+  font-weight: 500;
+  text-transform: capitalize;
+  line-height: 1.8;
+  letter-spacing: 0.6px;
+  margin-bottom: 1.25rem;
+}
+
+.meal-data {
+  margin-right: 0.5rem;
+  background-color: #979dac;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  color: white;
+}
+
+.ingredient {
+  margin-right: 0.5rem;
+}
+
+@media (min-width: 60rem) {
+  .meal-container {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    grid-gap: 3rem;
+  }
+  .meal-info {
+    padding-top: 0;
+  }
+}
+
+/* loader */
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+.dot-spinner {
+  --uib-size: 2.8rem;
+  --uib-speed: 0.9s;
+  --uib-color: #183153;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: var(--uib-size);
+  width: var(--uib-size);
+}
+
+.dot-spinner__dot {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100%;
+  width: 100%;
+}
+
+.dot-spinner__dot::before {
+  content: "";
+  height: 20%;
+  width: 20%;
+  border-radius: 50%;
+  background-color: var(--uib-color);
+  transform: scale(0);
+  opacity: 0.5;
+  animation: pulse0112 calc(var(--uib-speed) * 1.111) ease-in-out infinite;
+  box-shadow: 0 0 20px rgba(18, 31, 53, 0.3);
+}
+
+.dot-spinner__dot:nth-child(2) {
+  transform: rotate(45deg);
+}
+
+.dot-spinner__dot:nth-child(2)::before {
+  animation-delay: calc(var(--uib-speed) * -0.875);
+}
+
+.dot-spinner__dot:nth-child(3) {
+  transform: rotate(90deg);
+}
+
+.dot-spinner__dot:nth-child(3)::before {
+  animation-delay: calc(var(--uib-speed) * -0.75);
+}
+
+.dot-spinner__dot:nth-child(4) {
+  transform: rotate(135deg);
+}
+
+.dot-spinner__dot:nth-child(4)::before {
+  animation-delay: calc(var(--uib-speed) * -0.625);
+}
+
+.dot-spinner__dot:nth-child(5) {
+  transform: rotate(180deg);
+}
+
+.dot-spinner__dot:nth-child(5)::before {
+  animation-delay: calc(var(--uib-speed) * -0.5);
+}
+
+.dot-spinner__dot:nth-child(6) {
+  transform: rotate(225deg);
+}
+
+.dot-spinner__dot:nth-child(6)::before {
+  animation-delay: calc(var(--uib-speed) * -0.375);
+}
+
+.dot-spinner__dot:nth-child(7) {
+  transform: rotate(270deg);
+}
+
+.dot-spinner__dot:nth-child(7)::before {
+  animation-delay: calc(var(--uib-speed) * -0.25);
+}
+
+.dot-spinner__dot:nth-child(8) {
+  transform: rotate(315deg);
+}
+
+.dot-spinner__dot:nth-child(8)::before {
+  animation-delay: calc(var(--uib-speed) * -0.125);
+}
+
+@keyframes pulse0112 {
+  0%,
+  100% {
+    transform: scale(0);
+    opacity: 0.5;
+  }
+
+  50% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
